backend/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: book-my-doctor-api
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: api.bookmydoctor.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: book-my-doctor-api
                port:
                  number: 80
